// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpsellBanner UpsellBannerBody variant render matches screenshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#f2f4f6",
      "borderRadius": 8,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Bold",
          "fontSize": 18,
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      you could earn
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#1c8234",
          "fontFamily": "EuclidCircularB-Bold",
          "fontSize": 32,
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 40,
        }
      }
    >
      $454
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#6a737d",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        per year on your tokens
      </Text>
      <TouchableOpacity
        onPress={[MockFunction]}
      >
        <SvgMock
          color="#6a737d"
          height={16}
          name="Info"
          style={
            {
              "height": 16,
              "width": 16,
            }
          }
          width={16}
        />
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "justifyContent": "center",
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[MockFunction]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#0376c9",
          "borderRadius": 20,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#0376c9",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        Earn 4.5%
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`UpsellBanner UpsellBannerHeader variant render matches screenshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#f2f4f6",
      "borderRadius": 8,
      "gap": 8,
      "paddingHorizontal": 16,
      "paddingVertical": 24,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#141618",
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 18,
        "fontWeight": "700",
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    you could earn
  </Text>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#1c8234",
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 32,
        "fontWeight": "700",
        "letterSpacing": 0,
        "lineHeight": 40,
      }
    }
  >
    $454
  </Text>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#6a737d",
        "fontFamily": "EuclidCircularB-Regular",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 22,
      }
    }
  >
    per year on your tokens
  </Text>
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    onPress={[MockFunction]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderColor": "#0376c9",
        "borderRadius": 20,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 40,
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#0376c9",
          "fontFamily": "EuclidCircularB-Medium",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      Earn 4.5%
    </Text>
  </TouchableOpacity>
</View>
`;
